--- a/index.html
+++ b/index.html
@@ -146,8 +146,16 @@
             <div data-aos="fade-up" data-aos-delay="100">
                 <span class="number-accent">7</span>
                 <h3 class="text-xl font-bold mt-4 mb-4 text-brand-navy">Automotive Care</h3>
-                <p class="text-sm text-slate-600 text-justify">Elevamos a manutenção visual e técnica da sua frota. Através de parcerias estratégicas em serviços de detalhe, lavagem ecológica e manutenção preventiva especializada, garantimos que cada viatura preserva o seu valor de mercado. Uma frota bem cuidada não é apenas uma questão de imagem, é uma redução direta em custos de desvalorização precoce.</p>
-            </div>
+                <p class="text-sm text-slate-600 mb-4 text-justify">Garantimos a total operacionalidade e a preservação do valor de cada veículo através de uma gestão rigorosa de todas as intervenções necessárias. Eliminamos as preocupações logísticas do dia-a-dia, coordenando desde a manutenção preventiva até ao cuidado estético detalhado, assegurando que a mobilidade está sempre nas melhores condições de utilização, segurança e apresentação.</p>
+                <div class="text-xs text-slate-500 mb-6">
+                    <ul class="list-disc ml-4 space-y-1">
+                        <li>Agendamento de Revisões/li>
+                        <li>Inspéção Periódica Obrigatória</li>
+                        <li>Reparação de danos</li>
+                        <li>Lavagens Auto</li>
+                        <li>Serviços de Manutenção de Garagem Privada</li>
+                    </ul>
+                </div>
 
             <div data-aos="fade-up" data-aos-delay="200">
                 <span class="number-accent">8</span>
