--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <p class="text-sm text-slate-600 mb-4 text-justify">Garantimos a total operacionalidade e a preservação do valor de cada veículo através de uma gestão rigorosa de todas as intervenções necessárias. Eliminamos as preocupações logísticas do dia-a-dia, coordenando desde a manutenção preventiva até ao cuidado estético detalhado, assegurando que a mobilidade está sempre nas melhores condições de utilização, segurança e apresentação.</p>
                 <div class="text-xs text-slate-500 mb-6">
                     <ul class="list-disc ml-4 space-y-1">
-                        <li>Agendamento de Revisões/li>
+                        <li>Agendamento de Revisões</li>
                         <li>Inspéção Periódica Obrigatória</li>
                         <li>Reparação de danos</li>
                         <li>Lavagens Auto</li>
