--- a/index.html
+++ b/index.html
@@ -150,12 +150,13 @@
                 <div class="text-xs text-slate-500 mb-6">
                     <ul class="list-disc ml-4 space-y-1">
                         <li>Agendamento de Revisões</li>
-                        <li>Inspéção Periódica Obrigatória</li>
+                        <li>Inspeção Periódica Obrigatória</li>
                         <li>Reparação de danos</li>
                         <li>Lavagens Auto</li>
                         <li>Serviços de Manutenção de Garagem Privada</li>
                     </ul>
                 </div>
+            </div>
 
             <div data-aos="fade-up" data-aos-delay="200">
                 <span class="number-accent">8</span>
