--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div data-aos="fade-up" data-aos-delay="200">
                 <span class="number-accent">8</span>
                 <h3 class="text-xl font-bold mt-4 mb-4 text-brand-navy">Mobilidade de Luxo</h3>
-                <p class="text-sm text-slate-600 text-justify">Para necessidades exclusivas, soluções premium. Gerimos o procurement e a logística de viaturas de alto desempenho e luxo para executivos ou eventos especiais. Combinamos a sofisticação exigida com o rigor financeiro da FleetWise, garantindo que a exclusividade não compromete a eficiência fiscal da sua organização.</p>
+                <p class="text-sm text-slate-600 text-justify">Para quem não abdica da máxima exclusividade e distinção, oferecemos uma solução de transporte premium em viaturas de alta gama. Este é um serviço desenhado para satisfazer os padrões mais elevados de comodismo e discrição, onde cada detalhe é pensado para proporcionar uma experiência de viagem superior. Trata-se de uma proposta de alto valor, ideal para executivos ou ocasiões especiais que exijam um padrão de excelência e representação sem compromissos.</p>
             </div>
 
             <div data-aos="fade-up" data-aos-delay="300">
