--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FleetWise - v3.35</title>
+    <title>FleetWise - v3.36</title>
     
     <link rel="icon" type="image/png" href="favicon.png">
 
@@ -167,7 +167,7 @@
             <div data-aos="fade-up" data-aos-delay="300">
                 <span class="number-accent">9</span>
                 <h3 class="text-xl font-bold mt-4 mb-4 text-brand-navy">Loja</h3>
-                <p class="text-sm text-slate-600 text-justify mb-6">O nosso marketplace de acessórios e equipamentos essenciais para a gestão de frota. Desde wallboxes de carregamento doméstico a dispositivos de telemetria avançada, selecionamos os melhores produtos do mercado com condições exclusivas FleetWise. Simplificamos o acesso à tecnologia que move o seu negócio.</p>
+                <p class="text-sm text-slate-600 text-justify mb-6">Aqui encontras tudo o que precisas para tratar bem do teu carro, sem complicações. Selecionámos os melhores produtos de limpeza, acessórios e serviços de segurança, como a Cartrack, tudo com descontos e vantagens que só encontras através das nossas parcerias. Quer precises de um voucher para uma lavagem caprichada ou queiras aproveitar as nossas promoções exclusivas, a nossa loja é o sítio certo para dares um miminho ao teu veículo com confiança.</p>
                 <a href="#" class="inline-block bg-brand-green text-white px-6 py-2 rounded-full text-sm font-semibold hover:bg-emerald-600 transition shadow-lg">Espreitar</a>
             </div>
 
