--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <span class="number-accent">9</span>
                 <h3 class="text-xl font-bold mt-4 mb-4 text-brand-navy">Loja</h3>
                 <p class="text-sm text-slate-600 text-justify mb-6">Aqui encontras tudo o que precisas para tratar bem do teu carro, sem complicações. Selecionámos os melhores produtos de limpeza, acessórios e serviços de segurança, como a Cartrack, tudo com descontos e vantagens que só encontras através das nossas parcerias. Quer precises de um voucher para uma lavagem caprichada ou queiras aproveitar as nossas promoções exclusivas, a nossa loja é o sítio certo para dares um miminho ao teu veículo com confiança.</p>
-                <a href="#" class="inline-block bg-brand-green text-white px-6 py-2 rounded-full text-sm font-semibold hover:bg-emerald-600 transition shadow-lg">Espreitar</a>
+                <a href="loja.html" class="inline-block bg-brand-green text-white px-6 py-2 rounded-full text-sm font-semibold hover:bg-emerald-600 transition shadow-lg">Espreitar</a>
             </div>
 
         </div>
