--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <img src="Mercedes-Benz_GLC_eletrico_2026_24-1.webp" alt="Mercedes" class="pill-image-oversized border-8 border-white shadow-2xl">
                 </div>
                 
-                <a href="TCO_simulator.html" class="inline-block bg-brand-green text-white px-10 py-4 rounded-full text-xl font-bold hover:bg-emerald-600 transition shadow-2xl transform hover:scale-105 z-10">
+                <a href="TCO_simulator_blurry.html" class="inline-block bg-brand-green text-white px-10 py-4 rounded-full text-xl font-bold hover:bg-emerald-600 transition shadow-2xl transform hover:scale-105 z-10">
                     Simular!
                 </a>
                 
