--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FleetWise - v3.48</title>
+    <title>FleetWise - v3.49</title>
     
     <link rel="icon" type="image/png" href="favicon.png">
 
@@ -96,7 +96,7 @@
                     </div>
                 </div>
 
-                <a href="comparador.html" class="text-sm font-medium hover:text-brand-green transition">Comparador de Veículos</a>
+                <a href="vehicle_compare.html" class="text-sm font-medium hover:text-brand-green transition">Comparador xEV</a>
                 <a href="#quem-somos" class="text-sm font-medium hover:text-brand-green transition">Quem Somos</a>
                 <a href="loja.html" class="text-sm font-medium hover:text-brand-green transition">Loja</a>
                 <a href="TCO_simulator.html" class="bg-brand-green text-white px-5 py-2 rounded-full text-sm font-bold hover:bg-emerald-600 transition transform hover:scale-105">Simular TCO</a>
