--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FleetWise - v3.50</title>
+    <title>FleetWise - v3.51</title>
     
     <link rel="icon" type="image/png" href="favicon.png">
 
@@ -259,7 +259,7 @@
                     <p class="text-sm leading-relaxed">Não vendemos carros. Desenhamos soluções de mobilidade que equilibram as necessidades dos seus Clientes com os objetivos financeiros da sua empresa.</p>
                 </div>
                 <div class="md:w-1/3 space-y-4 text-sm" data-aos="fade-left">
-                    <p class="font-bold text-white text-lg">FleetWise, Unipessoal</p>
+                    <p class="font-bold text-white text-lg"><span class="text-brand-green">Fleet</span>Wise, Unipessoal</p>
                     <p class="text-slate-400 italic">Apartado *XPTO*<br>Portugal</p>
                     <div class="text-brand-green font-semibold py-2 text-xl italic">914 038 167</div>
                     <a href="mailto:geral@fleetwise.pt" class="hover:text-brand-green transition underline block">geral@fleetwise.pt</a>
