--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FleetWise - v3.51</title>
+    <title>FleetWise - v3.52</title>
     
     <link rel="icon" type="image/png" href="favicon.png">
 
@@ -121,6 +121,7 @@
                     <div class="dropdown-content">
                         <a href="seguros.html" class="dropdown-link">Seguros Automóvel</a>
                         <a href="carregamento.html" class="dropdown-link">Soluções de Carregamento</a>
+                        <a href="https://www.cartrack.pt/" class="dropdown-link">Cartrack</a>
                     </div>
                 </div>
                 <a href="vehicle_compare.html" class="text-sm font-medium hover:text-brand-green transition">Comparador xEV</a>
@@ -285,7 +286,7 @@
                     <p class="text-sm leading-relaxed">A FleetWise nasceu com uma missão clara: transformar a gestão de frotas em Portugal, elevando-a de uma tarefa administrativa para um ativo estratégico. Num mercado marcado pela complexidade fiscal, volatilidade energética e burocracia, as empresas precisam de parceiros que defendam os seus interesses. Somos uma consultora independente, focada exclusivamente na otimização do TCO e na eficiência operacional.</p>
                 </div>
                 <div class="md:w-1/3 space-y-4 text-sm" data-aos="fade-left">
-                    <p class="font-bold text-white text-lg">FleetWise, Unipessoal</p>
+                    <p class="font-bold text-white text-lg"><span class="text-brand-green">Fleet</span>Wise, Unipessoal</p>
                     <p class="text-slate-400 italic">Portugal</p>
                     <div class="text-brand-green font-semibold py-2 text-xl italic">914 038 167</div>
                     <a href="mailto:geral@fleetwise.pt" class="hover:text-brand-green transition underline block">geral@fleetwise.pt</a>
