--- a/loja.html
+++ b/loja.html
@@ -41,7 +41,7 @@
     <header class="bg-brand-navy text-white shadow-md sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
             <a href="index.html" class="text-2xl font-bold tracking-tight"><span class="text-brand-green">Fleet</span>Wise</a>
-            <a href="index.html" class="text-sm hover:text-brand-green transition">← Voltar ao Site</a>
+            <a href="index.html" class="back-btn"><i class="fa-solid fa-arrow-left mr-2"></i> Voltar</a>
         </div>
     </header>
 
