--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <a href="#servicos" class="mobile-link" onclick="toggleMobileMenu()">Serviços</a>
         <a href="vehicle_compare.html" class="mobile-link">Comparador xEV</a>
         <a href="loja.html" class="mobile-link">Loja</a>
-        <a href="#quem-somos" class="mobile-link" onclick="toggleMobileMenu()">Quem Somos</a>
+        <a href="quem_somos.html" class="mobile-link" onclick="toggleMobileMenu()">Quem Somos</a>
         <a href="TCO_simulator.html" class="mt-4 bg-brand-green text-center py-4 rounded-xl font-bold">Simular TCO</a>
     </div>
 
