--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>FleetWise - v3.55</title>
+    <title>FleetWise - v3.56</title>
     
     <link rel="icon" type="image/png" href="favicon.png">
 
@@ -101,7 +101,7 @@
                 </div>
 
                 <a href="vehicle_compare.html" class="text-sm font-medium hover:text-brand-green transition">Comparador xEV</a>
-                <a href="#quem-somos" class="text-sm font-medium hover:text-brand-green transition">Quem Somos</a>
+                <a href="quem_somos.html" class="text-sm font-medium hover:text-brand-green transition">Quem Somos</a>
                 <a href="loja.html" class="bg-brand-green text-white px-5 py-2 rounded-full text-sm font-bold hover:bg-emerald-600 transition">Loja</a>
             </nav>
 
